# flutter_soloud

./: .gitignore  .gitmodules  .metadata  AUTHORS  CHANGELOG.md  LICENSE  NO_OPUS_OGG_LIBS.md  README.md  WEB_NOTES.md  docs.json  ffigen.yaml  ffigen_capture.yaml  ffigen_player.yaml  fft.txt  mixer_capture.opus  plan-mixerOutputCapture.prompt.md  pubspec.yaml  wasm.sh  web.sh
.github/: FUNDING.yml
android/: CMakeLists.txt  Configure.cmake  build.gradle  settings.gradle  src.cmake
android/include/share/: Makefile
android/include/share/grabbag/: Makefile
android/src/main/: AndroidManifest.xml
android/src/main/java/flutter/soloud/flutter_soloud/: FlutterSoloudPlugin.java
docs/: index.mdx
example/: .metadata  README.md  analysis_options.yaml  example.md  podinstall_ios  podinstall_macos  pubspec.yaml
ios/: CMakeLists.txt  Configure.cmake  build_cmake.sh  flutter_soloud.podspec  src.cmake
lib/: audio_isolate.dart  bindings_capture_ffi.dart  fix_data.yaml  flutter_soloud.dart  soloud_controller.dart  (+3 more)
linux/: CMakeLists.txt  Configure.cmake  libspeexdsp.so.1.5.2  src.cmake
linux/flutter/ephemeral/: generated_config.cmake
linux/include/share/grabbag/: Makefile  Makefile.in
linux/libs/: libFLAC.so.14  libFLAC.so.14.0.0  libogg.so.0.8.5  libopus.so.0  libopus.so.0.10.1  libvorbis.so.0.4.9  libvorbisenc.so.2.0.12  libvorbisfile.so.3.3.8
macos/: CMakeLists.txt  build_cmake.sh  flutter_soloud.podspec
macos/flutter_soloud/: Package.swift
macos/flutter_soloud/Frameworks/flac.xcframework/: Info.plist
macos/flutter_soloud/Frameworks/ogg.xcframework/: Info.plist
macos/flutter_soloud/Frameworks/opus.xcframework/: Info.plist
macos/flutter_soloud/Frameworks/vorbis.xcframework/: Info.plist
macos/flutter_soloud/Frameworks/vorbisenc.xcframework/: Info.plist
macos/flutter_soloud/Frameworks/vorbisfile.xcframework/: Info.plist
macos/flutter_soloud/Sources/flutter_soloud/: LinkPrecompiled.c
macos/include/share/: Makefile
macos/include/share/grabbag/: Makefile
src/: CMakeLists.txt  Configure.cmake  active_sound.h  active_sound_fwd.h  analyzer.cpp  analyzer.h  bindings.cpp  bindings.h  bindings_capture.cpp  bindings_capture.h  capture.cpp  capture.h  common.cpp  common.h  enums.h  ffi_gen_tmp.h  flutter_soloud.cpp  flutter_soloud.h  output_capture.h  player.cpp  player.h  soloud_common.cpp  soloud_common.h  src.cmake
src/android/: android_focus.cpp  android_focus.h  jni_helper.cpp  jni_helper.h
src/audiobuffer/: audiobuffer.cpp  audiobuffer.h  buffer.h  circular_float_buffer.cpp  circular_float_buffer.h  flac_stream_decoder.cpp  flac_stream_decoder.h  icy_metadata.h  metadata_ffi.h  mp3_stream_decoder.cpp  mp3_stream_decoder.h  mp3_stream_decoder.h.old  mp3_stream_decoder.h.old2  ogg_flac_stream_decoder.cpp  ogg_flac_stream_decoder.h  ogg_seek_index.h  opus_stream_decoder.cpp  opus_stream_decoder.h  pull_buffer_stream.cpp  pull_buffer_stream.h  stream_decoder.cpp  stream_decoder.h  vorbis_stream_decoder.cpp  vorbis_stream_decoder.h  wav_stream_decoder.cpp  wav_stream_decoder.h
src/filters/: compressor.cpp  compressor.h  filters.cpp  filters.h  filters_fwd.h  limiter.cpp  limiter.h  parametric_eq3_filter.cpp  parametric_eq3_filter.h  parametric_eq_filter.cpp  parametric_eq_filter.h  pitch.cpp  pitch.h  pitch_shift_filter.cpp  pitch_shift_filter.h  smbPitchShift.cpp  smbPitchShift.h
src/filters/signalsmith-linear/: .gitignore  CMakeLists.txt  README.md  SUPPORT.txt  fft.h  stft.h
src/filters/signalsmith-linear/tests/: CMakeLists.txt  Makefile  main.cpp  stopwatch.h  test-ffts.h  test-linear.h  test-runner.h  test-stfts.h
src/filters/signalsmith-linear/tests/others/: signalsmith-fft.h
src/filters/signalsmith-stretch/: signalsmith-stretch.h
src/mixeroutput/: flac_output_encoder.cpp  flac_output_encoder.h  mixer_output.cpp  mixer_output.h  mixer_output_encoder.cpp  mixer_output_encoder.h  opus_output_encoder.cpp  opus_output_encoder.h  pcm_converter.cpp  pcm_converter.h  pcm_queue.cpp  pcm_queue.h  vorbis_output_encoder.cpp  vorbis_output_encoder.h  wav_output_encoder.cpp  wav_output_encoder.h
src/pffft/: pffft.c  pffft.h
src/soloud/: AUTHORS  README_flutter_soloud.md
src/soloud/contrib/: src.cmake
src/soloud/include/: soloud.h  soloud_audiosource.h  soloud_c.h  soloud_eqfilter.h  soloud_internal.h  soloud_wav.h  soloud_wavstream.h  timer.h  zx7decompress.h
src/soloud/src/audiosource/ay/: sndchip.cpp  sndrender.cpp
src/soloud/src/audiosource/speech/: klatt.cpp
src/soloud/src/audiosource/tedsid/: sid.cpp  ted.h
src/soloud/src/audiosource/vizsn/: soloud_vizsn.cpp
src/soloud/src/audiosource/wav/: dr_impl.cpp  dr_mp3.h  mb_ogg.cpp  mb_ogg.h  soloud_wav.cpp  soloud_wavstream.cpp
src/soloud/src/backend/miniaudio/: soloud_miniaudio.cpp
src/soloud/src/c_api/: soloud.def  soloud_c.cpp
src/soloud/src/core/: soloud.cpp  soloud_audiosource.cpp  soloud_core_3d.cpp  soloud_core_basicops.cpp  soloud_core_getters.cpp  soloud_core_looping.cpp  soloud_core_setters.cpp  soloud_core_voiceops.cpp  soloud_thread.cpp
src/soloud/src/filter/: soloud_eqfilter.cpp  soloud_fftfilter.cpp
src/synth/: basic_wave.cpp  basic_wave.h  soloud_adsr.h
src/waveform/: miniaudio_libvorbis.cpp  miniaudio_libvorbis.h  waveform.cpp  waveform.h
web/: CMakeLists.txt  Configure.cmake  compile  compile_wasm.sh  compile_worker.bat  compile_worker.sh  compile_worker_and_init_module.bat  compile_worker_and_init_module.sh  compile_worker_and_xiph.bat  compile_worker_and_xiph.sh  html_template.html  init_module.dart  init_module.dart.js  init_module.dart.js.deps  init_module.dart.js.map  init_xiph_modules.dart  init_xiph_modules.dart.js  init_xiph_modules.dart.js.deps  init_xiph_modules.dart.js.map  libflutter_soloud_plugin.js  libflutter_soloud_plugin.wasm  ogg.js  ogg.wasm  opus.js  opus.wasm  src.cmake  worker.dart  worker.dart.js  worker.dart.js.deps  worker.dart.js.map
windows/: CMakeLists.txt  Configure.cmake  ogg.lib  opus.lib  src.cmake
windows/include/FLAC/: stream_decoder.h
windows/libs/: FLAC.lib  ogg.lib  opus.lib  vorbis.lib  vorbisenc.lib  vorbisfile.lib
(+319 files in other folders)
